[package]
name = "evol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tungstenite = "0.15"
serde_json = "1.0"
sha2 = "0.9"
ring = "0.16"
rand = "0.8"
futures-util = "0.3.30"
hex = "0.4.3"
thiserror = "1.0.63"
clap = { version = "3.0", features = ["derive"] }


